fix(bs-templates): fix spacing of filter previews

--- a/packages/bs-templates/templates/agenda-stats/style.scss
+++ b/packages/bs-templates/templates/agenda-stats/style.scss
@@ -14,11 +14,11 @@
   }
 
   .oa-filter-value-preview {
-    margin-left: 8px;
-    display: inline-block;
+    margin-left: 6px;
+    line-height: 24px;
 
-    .badge + .badge {
-      margin-left: 4px;
+    .badge {
+      margin-right: 4px;
     }
   }
 
